--- a/package.json
+++ b/package.json
@@ -12,10 +12,30 @@
   "author": "",
   "license": "UNLICENSED",
   "devDependencies": {
+    "@types/date-fns": "^2.6.0",
     "@types/express": "^4.17.11",
+    "@types/faker": "^5.1.7",
+    "@types/knex": "^0.16.1",
+    "@types/lodash": "^4.14.168",
+    "@types/winston": "^2.4.4",
+    "@types/ws": "^7.4.0",
+    "@typescript-eslint/eslint-plugin": "^4.19.0",
+    "@typescript-eslint/parser": "^4.19.0",
+    "eslint": "^7.23.0",
+    "faker": "^5.5.0",
     "typescript": "^4.2.3"
   },
   "dependencies": {
-    "express": "^4.17.1"
+    "date-fns": "^2.19.0",
+    "express": "^4.17.1",
+    "knex": "^0.95.4",
+    "lib0": "^0.2.41",
+    "lodash": "^4.17.21",
+    "winston": "^3.3.3",
+    "winston-console-format": "^1.0.8",
+    "ws": "^6.2.1",
+    "y-protocols": "^1.0.4",
+    "y-websocket": "^1.3.11",
+    "yjs": "^13.5.3"
   }
 }
