horizontally scalable on paper

--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "@types/date-fns": "^2.6.0",
     "@types/express": "^4.17.11",
     "@types/faker": "^5.1.7",
+    "@types/ioredis": "^4.22.3",
     "@types/knex": "^0.16.1",
     "@types/lodash": "^4.14.168",
+    "@types/uuid": "^8.3.0",
     "@types/winston": "^2.4.4",
     "@types/ws": "^7.4.0",
     "@typescript-eslint/eslint-plugin": "^4.19.0",
@@ -34,10 +36,12 @@
   "dependencies": {
     "date-fns": "^2.19.0",
     "express": "^4.17.1",
+    "ioredis": "^4.26.0",
     "knex": "^0.95.4",
     "lib0": "^0.2.41",
     "lodash": "^4.17.21",
     "pg": "^8.5.1",
+    "uuid": "^8.3.2",
     "winston": "^3.3.3",
     "winston-console-format": "^1.0.8",
     "ws": "^6.2.1",
