--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "node -r source-map-support/register -r dotenv/config dist/__tests__/main.js dotenv_config_path=.env.test.local",
     "clean": "rm -rf dist",
     "build": "npm run clean && tsc",
     "watch": "npm run clean && tsc -w",
@@ -17,20 +17,24 @@
   "devDependencies": {
     "@types/date-fns": "^2.6.0",
     "@types/express": "^4.17.11",
-    "@types/faker": "^5.1.7",
+    "@types/faker": "^5.5.5",
     "@types/ioredis": "^4.22.3",
     "@types/knex": "^0.16.1",
     "@types/lodash": "^4.14.168",
     "@types/winston": "^2.4.4",
-    "@types/ws": "^7.4.0",
+    "@types/ws": "^7.4.4",
+    "@types/wtfnode": "^0.7.0",
     "@typescript-eslint/eslint-plugin": "^4.19.0",
     "@typescript-eslint/parser": "^4.19.0",
     "dotenv": "^8.2.0",
     "eslint": "^7.23.0",
-    "faker": "^5.5.0",
+    "faker": "^5.5.3",
     "nodemon": "^2.0.7",
     "source-map-support": "^0.5.19",
-    "typescript": "^4.2.3"
+    "typescript": "^4.2.3",
+    "ws": "^6.2.1",
+    "wtfnode": "^0.8.4",
+    "y-websocket": "^1.3.14"
   },
   "dependencies": {
     "date-fns": "^2.19.0",
@@ -42,9 +46,7 @@
     "pg": "^8.5.1",
     "winston": "^3.3.3",
     "winston-console-format": "^1.0.8",
-    "ws": "^6.2.1",
     "y-protocols": "^1.0.4",
-    "y-websocket": "^1.3.11",
     "yjs": "^13.5.3"
   }
 }
