--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "tables": "node -r source-map-support/register -r dotenv/config dist/tables.js dotenv_config_path=.env.local"
   },
   "author": "",
-  "license": "UNLICENSED",
+  "license": "MIT",
   "devDependencies": {
     "@types/date-fns": "^2.6.0",
     "@types/express": "^4.17.13",
