--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/ioredis": "^4.27.4",
     "@types/knex": "^0.16.1",
     "@types/lodash": "^4.14.175",
+    "@types/uuid": "^8.3.4",
     "@types/winston": "^2.4.4",
     "@types/ws": "^8.2.0",
     "@types/wtfnode": "^0.7.0",
@@ -34,6 +35,7 @@
     "nodemon": "^2.0.13",
     "source-map-support": "^0.5.20",
     "typescript": "^4.4.3",
+    "uuid": "^9.0.0",
     "ws": "^8.2.2",
     "wtfnode": "^0.9.1",
     "y-websocket": "^1.3.16"
