--- a/package.json
+++ b/package.json
@@ -10,8 +10,7 @@
     "build": "npm run clean && tsc",
     "watch": "npm run clean && tsc -w",
     "dev": "nodemon -r source-map-support/register -r dotenv/config dist/app.js dotenv_config_path=.env.local",
-    "start": "node -r source-map-support/register dist/app.js",
-    "tables": "node -r source-map-support/register -r dotenv/config dist/tables.js dotenv_config_path=.env.local"
+    "start": "node -r source-map-support/register dist/app.js"
   },
   "author": "",
   "license": "MIT",
@@ -22,7 +21,6 @@
     "@types/ioredis": "^4.27.4",
     "@types/knex": "^0.16.1",
     "@types/lodash": "^4.14.175",
-    "@types/uuid": "^8.3.4",
     "@types/winston": "^2.4.4",
     "@types/ws": "^8.2.0",
     "@types/wtfnode": "^0.7.0",
@@ -32,18 +30,20 @@
     "eslint": "^7.32.0",
     "faker": "^5.5.3",
     "lodash": "^4.17.21",
+    "nock": "^13.2.9",
     "nodemon": "^2.0.13",
     "source-map-support": "^0.5.20",
     "typescript": "^4.4.3",
-    "uuid": "^9.0.0",
     "ws": "^8.2.2",
     "wtfnode": "^0.9.1",
     "y-websocket": "^1.3.16"
   },
   "dependencies": {
+    "axios": "^1.1.3",
     "date-fns": "^2.29.3",
     "express": "^4.18.2",
     "ioredis": "^4.28.5",
+    "js-base64": "^3.7.2",
     "knex": "^0.95.15",
     "lib0": "^0.2.52",
     "pg": "^8.8.0",
