working implementation with permissions

--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "@types/faker": "^5.5.8",
     "@types/ioredis": "^4.27.4",
     "@types/knex": "^0.16.1",
-    "@types/lodash": "^4.14.175",
+    "@types/lodash": "^4.14.188",
+    "@types/qs": "^6.9.7",
     "@types/winston": "^2.4.4",
     "@types/ws": "^8.2.0",
     "@types/wtfnode": "^0.7.0",
@@ -47,6 +48,7 @@
     "knex": "^0.95.15",
     "lib0": "^0.2.52",
     "pg": "^8.8.0",
+    "qs": "^6.11.0",
     "winston": "^3.8.2",
     "winston-console-format": "^1.0.8",
     "y-protocols": "^1.0.5",
