--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "build": "npm run clean && tsc",
     "watch": "npm run clean && tsc -w",
     "dev": "nodemon -r source-map-support/register -r dotenv/config dist/app.js dotenv_config_path=.env.local",
-    "start": "node -r source-map-support/register dist/app.js"
+    "start": "node -r source-map-support/register dist/app.js",
+    "postinstall": "node ./fix_y-websocket.js"
   },
   "author": "",
   "license": "MIT",
