added a .env.example which works

--- a/.env.example
+++ b/.env.example
@@ -3,7 +3,7 @@ SERVER_PORT=3002
 
 API_ENDPOINT_BASE=http://localhost:3001
 
-REDIS_HOST=
-REDIS_PORT=
+REDIS_HOST=localhost
+REDIS_PORT=6379
 REDIS_PASSWORD=
-REDIS_PREFIX=
+REDIS_PREFIX=crdt:wss:
